demo/echo-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata: { name: echo, namespace: demo, labels: { app: echo } }
spec:
  replicas: 1
  selector: { matchLabels: { app: echo } }
  template:
    metadata: { labels: { app: echo } }
    spec:
      containers:
      - name: echo
        image: ealen/echo-server:latest
        ports: [ { containerPort: 80 } ]
---
apiVersion: v1
kind: Service
metadata: { name: echo, namespace: demo }
spec:
  selector: { app: echo }
  ports: [ { port: 80, targetPort: 80 } ]
